fix: word-wrap changes and monospace code
- word-wrap break words to better fit for long URLs
- tables fitting the layout max width

--- a/src/assets/scss/_tables.scss
+++ b/src/assets/scss/_tables.scss
@@ -3,6 +3,10 @@ table.confluenceTable {
   text-align: left;
   position: relative;
   border-collapse: collapse;
+  color: var(--font-color);
+  width: 100%;
+  // max-width: var(--base-width);
+  table-layout: fixed;
 }
 
 table.confluenceTable th.confluenceTh {
@@ -12,6 +16,7 @@ table.confluenceTable th.confluenceTh {
   z-index: 2;
   box-shadow: 0 3px 2px -1px rgba(0, 0, 0, 0.4);
   font-size: var(--main-font-size);
+  word-wrap: break-word;
 }
 
 .confluenceTh,
@@ -21,6 +26,7 @@ table.confluenceTable th.confluenceTh {
   vertical-align: top;
   // text-align: left;
   min-width: 8px; /* CONF-39943: set table cell min-width to which cursor can be focused */
+  word-wrap: break-word;
 }
 
 /* Lists in tables */
@@ -348,7 +354,8 @@ table.confluenceTable th.confluenceTh.nohighlight > p {
 table.confluenceTable td.confluenceTd img,
 table.confluenceTable td.confluenceTd .confluence-embedded-file-wrapper img,
 table.confluenceTable th.confluenceTh .confluence-embedded-file-wrapper img {
-  max-width: none;
+  // large images to adapt to the size of the cell
+  max-width: auto;
 }
 
 table.confluenceTable td.numberingColumn {
